# lancelot-2

./: README.md
Device Code/: CMakeLists.txt  partitions.csv  sdkconfig
Device Code/main/: CMakeLists.txt  DataPacket.h
Device Code/main/Sensors/elm327/: elm327.c  elm327.h
Device Code/main/Sensors/gps/: gps.c
Device Code/main/Transmission/: transmission.h
backend/: package-lock.json  package.json
backend/src/: app.module.ts
backend/src/auth/: README.md  auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts
backend/src/config/: jwt.config.ts
backend/src/database/: README.md  db-logger.service.ts
backend/src/devices/: README.md  device.entity.ts  devices.controller.ts  devices.service.ts
backend/src/devices/dto/: create-device.dto.ts
backend/src/historical/: README.md
backend/src/mqtt/: README.md  mqtt.module.ts  mqtt.service.ts
backend/src/realtime/: README.md
backend/src/users/: README.md  user.entity.ts  users.service.ts
backend/src/websocket/: websocket.gateway.ts  websocket.module.ts
main/: Config.h  main.c
main/Sensors/gps/: gps.h
main/Transmission/: transmission.c
